Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11617

Occasional "failed to read page after 10 retries" with partial encrypted backup

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.20
    • 10.1.22
    • Backup
    • None
    • 10.1.22

    Description

      Attached test case shows occasional database corruption errors (at least on Windows machine):

      161220 23:29:51 [01] Copying .\testdatabase\t2.ibd to F:\m7\mysql-test\var\tmp\backup\testdatabase\t2.ibd
      InnoDB: Read page 0 from tablespace for space 37 name testdatabase/t2 key_id 0 encryption 0 handle 568.
      [01] xtrabackup: Database page corruption detected at page 1, retrying...
      ...
      161220 23:29:52 >> log scanned up to (1770676)
      [01] xtrabackup: Error: failed to read page after 10 retries. File .\testdatabase\t2.ibd seems to be corrupted.

      Try running with --repeat=100
      I couldn't reproduce the same without encryption enabled.

      The same test on Ubuntu 16.04 occasionally results in crash below instead:

      161220 23:32:42 [ERROR] mysqld got signal 11 ;
      ...
      stack_bottom = 0x0 thread_stack 0x48400
      /m7/extra/xtrabackup/xtrabackup(my_print_stacktrace+0x29)[0x55be6b13bef9]
      /m7/extra/xtrabackup/xtrabackup(handle_fatal_signal+0x2f5)[0x55be6ad25d65]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x113e0)[0x7ff8b64ee3e0]
      /lib/x86_64-linux-gnu/libc.so.6(re_compile_fastmap+0x17)[0x7ff8b47c3f37]
      /lib/x86_64-linux-gnu/libc.so.6(regcomp+0xd2)[0x7ff8b47c46b2]
      mysys/stacktrace.c:268(my_print_stacktrace)[0x55be6ab0f7ae]
      xtrabackup/xtrabackup.cc:3418(xb_register_regex(char const*))[0x55be6ab0e816]
      xtrabackup/xtrabackup.cc:3508(xb_filters_init())[0x55be6ab0f224]
      xtrabackup/xtrabackup.cc:3860(xtrabackup_backup_func())[0x55be6ab137be]
      xtrabackup/xtrabackup.cc:7187(main)[0x55be6aafabe3]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0)[0x7ff8b46fd830]
      /m7/extra/xtrabackup/xtrabackup(_start+0x29)[0x55be6ab0e149]

      Attachments

        1. 1.opt
          0.3 kB
        2. 1.test
          3 kB

        Activity

          People

            jplindst Jan Lindström (Inactive)
            anikitin Andrii Nikitin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.